# vartools

./: .gitignore  13.- Data_Tarea_5.xlsx  README.md  pyproject.toml  test.ipynb  vartools.py
src/vartools/: __init__.py  _validation.py  backtesting.py  data.py  derivatives.py  fixed_income.py  optimization.py  portfolio.py  risk.py
