[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vartools"
version = "0.0.1"
authors = [
  { name="Luis Márquez", email="luismaba2004@gmail.com" },
]
description = "collection of biblical humans and their family relations"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MariyaSha/humans"
Issues = "https://github.com/MariyaSha/humans"